Fix logo image path case to 'Logos' in index.html

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 <div class="logos">
   <div class="logos_slide">
 
-    <div class="glass"><img src="logos/3m.svg"></div>
-    <div class="glass"><img src="logos/barstool-store.svg"></div>
-    <div class="glass"><img src="logos/budweiser.svg"></div>
-    <div class="glass"><img src="logos/buzzfeed.svg"></div>
-    <div class="glass"><img src="logos/forbes.svg"></div>
-    <div class="glass"><img src="logos/macys.svg"></div>
-    <div class="glass"><img src="logos/menshealth.svg"></div>
-    <div class="glass"><img src="logos/mrbeast.svg"></div>
+    <div class="glass"><img src="Logos/3m.svg"></div>
+    <div class="glass"><img src="Logos/barstool-store.svg"></div>
+    <div class="glass"><img src="Logos/budweiser.svg"></div>
+    <div class="glass"><img src="Logos/buzzfeed.svg"></div>
+    <div class="glass"><img src="Logos/forbes.svg"></div>
+    <div class="glass"><img src="Logos/macys.svg"></div>
+    <div class="glass"><img src="Logos/menshealth.svg"></div>
+    <div class="glass"><img src="Logos/mrbeast.svg"></div>
 
     <!-- Duplicate for infinite -->
-    <div class="glass"><img src="logos/3m.svg"></div>
-    <div class="glass"><img src="logos/barstool-store.svg"></div>
-    <div class="glass"><img src="logos/budweiser.svg"></div>
-    <div class="glass"><img src="logos/buzzfeed.svg"></div>
-    <div class="glass"><img src="logos/forbes.svg"></div>
-    <div class="glass"><img src="logos/macys.svg"></div>
-    <div class="glass"><img src="logos/menshealth.svg"></div>
-    <div class="glass"><img src="logos/mrbeast.svg"></div>
+    <div class="glass"><img src="Logos/3m.svg"></div>
+    <div class="glass"><img src="Logos/barstool-store.svg"></div>
+    <div class="glass"><img src="Logos/budweiser.svg"></div>
+    <div class="glass"><img src="Logos/buzzfeed.svg"></div>
+    <div class="glass"><img src="Logos/forbes.svg"></div>
+    <div class="glass"><img src="Logos/macys.svg"></div>
+    <div class="glass"><img src="Logos/menshealth.svg"></div>
+    <div class="glass"><img src="Logos/mrbeast.svg"></div>
 
   </div>
 </div>
