Refactor index.html structure and add SEO meta tags

--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Icon/Mine Logo.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Salah Uddin Kader" />
+    <meta
+      name="description"
+      content="A clean and modern web section featuring a pure CSS infinite logo carousel with a developer-style typing animation.
+      Perfect for portfolio websites, agency landing pages, Brands We Work With, or client collaboration showcases."
+    />
+    <meta
+      name="keyword"
+      content="css logo slider, logo animation, css animation, Salah Uddin Kader, salahuddingfx, logo-animation"
+    />
+    <link rel="shortcut icon" href="Icon/Mine Logo.png" type="image/x-icon" />
     <title>Logo Slider</title>
-    <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h2 class="slider-title">CSS Logo Slide Animation</h2>
-<div class="logos">
-  <div class="logos_slide">
+    <div class="logos">
+      <div class="logos_slide">
+        <div class="glass"><img src="Logos/3m.svg" /></div>
+        <div class="glass"><img src="Logos/barstool-store.svg" /></div>
+        <div class="glass"><img src="Logos/budweiser.svg" /></div>
+        <div class="glass"><img src="Logos/buzzfeed.svg" /></div>
+        <div class="glass"><img src="Logos/forbes.svg" /></div>
+        <div class="glass"><img src="Logos/macys.svg" /></div>
+        <div class="glass"><img src="Logos/menshealth.svg" /></div>
+        <div class="glass"><img src="Logos/mrbeast.svg" /></div>
 
-    <div class="glass"><img src="Logos/3m.svg"></div>
-    <div class="glass"><img src="Logos/barstool-store.svg"></div>
-    <div class="glass"><img src="Logos/budweiser.svg"></div>
-    <div class="glass"><img src="Logos/buzzfeed.svg"></div>
-    <div class="glass"><img src="Logos/forbes.svg"></div>
-    <div class="glass"><img src="Logos/macys.svg"></div>
-    <div class="glass"><img src="Logos/menshealth.svg"></div>
-    <div class="glass"><img src="Logos/mrbeast.svg"></div>
-
-    <!-- Duplicate for infinite -->
-    <div class="glass"><img src="Logos/3m.svg"></div>
-    <div class="glass"><img src="Logos/barstool-store.svg"></div>
-    <div class="glass"><img src="Logos/budweiser.svg"></div>
-    <div class="glass"><img src="Logos/buzzfeed.svg"></div>
-    <div class="glass"><img src="Logos/forbes.svg"></div>
-    <div class="glass"><img src="Logos/macys.svg"></div>
-    <div class="glass"><img src="Logos/menshealth.svg"></div>
-    <div class="glass"><img src="Logos/mrbeast.svg"></div>
-
-  </div>
-</div>
-
-</body>
+        <!-- Duplicate for infinite -->
+        <div class="glass"><img src="Logos/3m.svg" /></div>
+        <div class="glass"><img src="Logos/barstool-store.svg" /></div>
+        <div class="glass"><img src="Logos/budweiser.svg" /></div>
+        <div class="glass"><img src="Logos/buzzfeed.svg" /></div>
+        <div class="glass"><img src="Logos/forbes.svg" /></div>
+        <div class="glass"><img src="Logos/macys.svg" /></div>
+        <div class="glass"><img src="Logos/menshealth.svg" /></div>
+        <div class="glass"><img src="Logos/mrbeast.svg" /></div>
+      </div>
+    </div>
+  </body>
 </html>
