Update page title and slider heading to include author name

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       content="css logo slider, logo animation, css animation, Salah Uddin Kader, salahuddingfx, logo-animation"
     />
     <link rel="shortcut icon" href="Icon/Mine Logo.png" type="image/x-icon" />
-    <title>Logo Slider</title>
+    <title>CSS Logo Slide Animation | Salah Uddin Kader</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2 class="slider-title">CSS Logo Slide Animation</h2>
+    <h2 class="slider-title">CSS Logo Slide Animation | Salah Uddin Kader</h2>
     <div class="logos">
       <div class="logos_slide">
         <div class="glass"><img src="Logos/3m.svg" /></div>
